# EuglenaAnalyzer

./: .gitignore  README.md  console_color.py  detect_head.py  lab.py  memo.txt  pyproject.toml
data/: euglena-m1_2.txt
debug/: lab.py  memo.txt
eanalyzer/: __init__.py  count_rotations.py  csv_formatter.py  detect_head.py
