[project]
name = "eanalyzer_shinxe"
version = "0.0.1"
authors = [
  { name="shinxe", email="shinxe@xalyfi.com" },
]
description = "Euglena analysis tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "pandas","matplotlib","tqdm"
]

[project.urls]
"Homepage" = "https://github.com/shinxe/"
"Bug Tracker" = "https://xalyfi.com/"

[tool.setuptools.packages.find]
exclude = ["debug"]